[package]
name = "opencontainers"
version = "0.0.0-alpha.2"
authors = ["Fabian Freyer <fabian.freyer@physik.tu-berlin.de>"]
description = "OpenContainers Implementation in Rust"
license = "BSD-3-Clause AND Apache-2.0"
repository = "https://github.com/fubarnetes/opencontainers-rs"
keywords = ["container"]
categories = ["api-bindings"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
failure ="0.1"
flate2 = "1.0.7"
hyperx = "0.13"
log = "0.4.0"
pest = "2.1"
pest_derive = "2.1"
reqwest = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tar = "0.4.22"
ttl_cache = "0.5.1"
void = "1.0.2"
www-authenticate = "0.3.0"

[dev-dependencies]
pretty_env_logger = "0.3.0"
